Updated Web App

--- a/index.html
+++ b/index.html
@@ -18,22 +18,10 @@
 
     <!-- Add your site or application content here -->
     <div id="root"></div>
-    <div id="ui">
-        <div class="menu" onclick="toggleMenu()">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-    </div>
-     <div id="map"></div>
-     <div id="info">
-         <div id="data">
-         </div>
-     </div>
-    <script src="./js/pan.min.js"></script>
-    <script src="./js/main.js"></script>
+
     <script src="./builds/app.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVo-f0IIK8eufTwMcku1mlSFjPoa3E00k&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVo-f0IIK8eufTwMcku1mlSFjPoa3E00k"></script>
+    <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVo-f0IIK8eufTwMcku1mlSFjPoa3E00k&callback=initMap"></script> -->
 </body>
 
 </html>
